k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: geowealth-demo
  labels:
    app.kubernetes.io/part-of: geowealth-demo
